# SEP_AG

./: CMakeLists.txt  README.md  main.cpp
cars/: Car.cpp  Car.h  Makefile  cars_list.txt  main.cpp
cars/code/: Car.cpp  main.cpp
student_avg/code/: Makefile  Student.cpp  Student.h  Subject.cpp  Subject.h  main.cpp
